@@ -26,8 +26,8 @@
 
 class GoodNews {
 
-    const VERSION = '1.3.8';
-    const RELEASE = 'pl';
+    const VERSION = '1.3.9';
+    const RELEASE = 'beta1';
     
     const MIN_PHP_VERSION = '5.3.0';
 
